fixed advancement box top margin to align bottom

--- a/Uncharted Worlds/Uncharted Worlds.css
+++ b/Uncharted Worlds/Uncharted Worlds.css
@@ -258,7 +258,8 @@ div.sheet-advancementbox {
     background-image:url(http://i.imgur.com/x7DpM1j.png);
     background-repeat:no-repeat;
     width:371px;
-    margin-left:-30px;
+    margin-left:-17px;
+    margin-top:92px;
     height:123px;
     padding-top:20px; 
     padding-left:20px;
